--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>Contact Us/Buy Some Candy!</h1>
       <form
         target="_blank"
-        action="https://formsubmit.co/shark1421415125"
+        action="https://formsubmit.co/shark1421415125@gmail.com"
         method="POST"
       >
         <div class="form-group">
